--- a/index.html
+++ b/index.html
@@ -258,6 +258,32 @@
                     href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-44c2aa">
                     <h3>2.27 POO | Javascript</h3>
                 </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-853657">
+                    <h3>2.28 Livecoding: Nucba NFT | Javascript</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-853657-28abea">
+                    <h3>2.29 Livecoding: Nucba NFT II | Javascript</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-3628e5">
+                    <h3>3.1 Introducción a React | React JS</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-ae0151">
+                    <h3>3.3 Estilos con CSS y librerías externas | React JS</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-f65385">
+                    <h3>3.4 Manejo de estados, eventos y ciclo de vida | React JS</h3>
+                </a>
+
             </div>
 
             <!-- Documentación -->
@@ -399,6 +425,18 @@
                     ">
                     <h3>🖥️📋 E5 Grupal Old: NucbaZappi | Javascript</h3>
                     <p>Entrega</p>
+                </a>
+
+                <a class="item" href="https://plataforma.nucba.io/c/1917-codingbootcamp/proyecto-integrador-javascript
+                    ">
+                    <h3>🎓 Proyecto Integrador | Javascript</h3>
+                    <p>Integrador</p>
+                </a>
+
+                <a class="item desafio" href="https://plataforma.nucba.io/c/1917-codingbootcamp/documentacion-git-y-github-diseno-web-b7hrr-cx9fs-iviae-p7cvd
+                    ">
+                    <h3>⚛️ Documentación REACT JS 101 | React</h3>
+                    <p>Documentación</p>
                 </a>
 
             </div>
