--- a/index.html
+++ b/index.html
@@ -284,6 +284,51 @@
                     <h3>3.4 Manejo de estados, eventos y ciclo de vida | React JS</h3>
                 </a>
 
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-1fd803">
+                    <h3>3.5 Hooks avanzados y Context API | React JS</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-f6bc88">
+                    <h3>3.6 Livecoding - Repaso | React JS</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-1f3e47">
+                    <h3>3.7 Livecoding - Redux | React JS</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-126768">
+                    <h3>3.8 Livecoding - Fetching y custom hooks | React JS</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-6e5f09">
+                    <h3>3.9 Livecoding - React Router | React JS</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-2b0e5b">
+                    <h3>3.10 Livecoding - React Router II & Intro a React Query | React JS</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-515074">
+                    <h3>3.11 Livecoding - React Query | React JS</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-515074">
+                    <h3>3.11 Livecoding - React Query | React JS</h3>
+                </a>
+
+                <a class="item"
+                    href="https://plataforma.nucba.io/c/1917-codingbootcamp/martes-y-jueves-1917-coding-bootcamp-07b750">
+                    <h3>Martes y Jueves - #1917 Coding Bootcamp</h3>
+                </a>
+
             </div>
 
             <!-- Documentación -->
@@ -436,6 +481,30 @@
                 <a class="item desafio" href="https://plataforma.nucba.io/c/1917-codingbootcamp/documentacion-git-y-github-diseno-web-b7hrr-cx9fs-iviae-p7cvd
                     ">
                     <h3>⚛️ Documentación REACT JS 101 | React</h3>
+                    <p>Documentación</p>
+                </a>
+
+                <a class="item desafio" href="https://plataforma.nucba.io/c/1917-codingbootcamp/documentacion-react-js-avanzado
+                    ">
+                    <h3>⚛️ Documentación REACT JS AVANZADO | React</h3>
+                    <p>Documentación</p>
+                </a>
+
+                <a class="item desafio" href="https://plataforma.nucba.io/c/1917-codingbootcamp/2-1-introduccion-a-js-javascript-tguhv-ykxtk-zyhuc-z7m69-hlcxi-uijs2-uns2v
+                    ">
+                    <h3>🖥️📋 E1: toDo List | React JS</h3>
+                    <p>Entrega</p>
+                </a>
+
+                <a class="item desafio" href="https://plataforma.nucba.io/c/1917-codingbootcamp/2-1-introduccion-a-js-javascript-tguhv-ykxtk-zyhuc-z7m69-hlcxi-uijs2-uns2v-5tj99
+                    ">
+                    <h3>🖥️📋 E2: toDo List II | React JS</h3>
+                    <p>Entrega</p>
+                </a>
+
+                <a class="item desafio" href="https://plataforma.nucba.io/c/1917-codingbootcamp/2-1-introduccion-a-js-javascript-tguhv-ykxtk-zyhuc-z7m69-hlcxi-uijs2-g32i0-yluic-rkjxu
+                    ">
+                    <h3>⚛️ Documentación REACT Router | React</h3>
                     <p>Documentación</p>
                 </a>
 
